--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop --host=0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -15,11 +15,20 @@
   },
   "dependencies": {
     "gatsby": "^3.4.1",
+    "gatsby-core-utils": "^2.7.0-next.0",
+    "gatsby-image": "^3.6.0",
+    "gatsby-plugin-sitemap": "^4.2.0",
+    "gatsby-source-contentful": "^5.6.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "autoprefixer": "^10.2.5",
+    "gatsby-plugin-postcss": "^4.6.0",
+    "postcss": "^8.3.0",
+    "prettier": "2.2.1",
+    "tailwindcss": "^2.1.2"
   },
   "repository": {
     "type": "git",
