--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.3",
+    "@contentful/rich-text-types": "^14.1.2",
     "gatsby": "^3.4.1",
     "gatsby-core-utils": "^2.7.0-next.0",
     "gatsby-image": "^3.6.0",
