--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gatsby-source-contentful": "^5.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.14.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
