--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.4.1",
     "gatsby-core-utils": "^2.7.0-next.0",
     "gatsby-image": "^3.6.0",
+    "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-source-contentful": "^5.6.0",
     "react": "^17.0.1",
