--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "gatsby-core-utils": "^2.7.0-next.0",
     "gatsby-image": "^3.6.0",
     "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-source-contentful": "^5.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.2"
   },
