--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.3",
     "@contentful/rich-text-types": "^14.1.2",
+    "@headlessui/react": "^1.3.0",
+    "@types/node": "^16.0.1",
     "gatsby": "^3.4.1",
     "gatsby-core-utils": "^2.7.0-next.0",
     "gatsby-image": "^3.6.0",
