--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@contentful/rich-text-types": "^14.1.2",
     "@headlessui/react": "^1.3.0",
     "@types/node": "^16.0.1",
+    "babel-plugin-remove-graphql-queries": "^3.9.0",
     "gatsby": "^3.4.1",
     "gatsby-core-utils": "^2.7.0-next.0",
     "gatsby-image": "^3.6.0",
@@ -44,5 +45,8 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "resolutions": {
+    "babel-plugin-remove-graphql-queries": "3.9.0"
   }
 }
