--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-source-datocms": "^2.6.16",
+    "gatsby-transformer-remark": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
